# paint-type

./: .gitignore  .guix-channel  .pre-commit-config.yaml  .trusted-base-ignore  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  ARCHITECTURE.md  AUDIT.adoc  BADGE-BOARD.adoc  CODEOWNERS  CONTRIBUTING.md  Containerfile  DEPENDENCY-SCHEDULER.adoc  EXPLAINME.adoc  GOVERNANCE.adoc  Justfile  LICENSE  MAINTAINERS.adoc  PROOF-NEEDS.md  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  SECURITY.md  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  TOPOLOGY.md  eclexiaiser.toml  llm-warmup-dev.md  llm-warmup-user.adoc  llm-warmup-user.md  mise.toml  selur-compose.toml  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: .mailmap  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  MAINTAINERS  README.adoc  SECURITY.md  SUPPORT  copilot-instructions.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: boj-build.yml  bridge-verify.yml  codeql.yml  collab-ci.yml  coverage.yml  cross-platform.yml  dogfood-gate.yml  e2e.yml  fuzz-smoke.yml  governance.yml  guix-nix-policy.yml  host.yml  hypatia-scan.yml  idris-ci.yml  mirror.yml  npm-bun-blocker.yml  pages.yml  proofs.yml  quality.yml  rust-ci.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  shell-e2e.yml  static-analysis-gate.yml  ts-blocker.yml  verify-manifests.yml  workflow-linter.yml
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  STATE.a2ml  TRUST.contractile  root-allow.txt
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/agent_instructions/: README.adoc  coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/ai/: .cursorrules  .windsurfrules
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/bot_directives/: root-hygiene.scm
.machine_readable/compliance/reuse/: dep5
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/contractiles/: Justfile
.machine_readable/contractiles/k9/: README.adoc  methodology-guard.k9.ncl
.machine_readable/descriptiles/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/integrations/: groove.a2ml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml
.machine_readable/scripts/maintenance/: maint-assault.sh
.well-known/: humans.txt  security.txt
.well-known/groove/: 0.2-AI-MANIFEST.a2ml  README.adoc  manifest.json
LICENSES/: 0.1-AI-MANIFEST.a2ml  README.adoc
audits/: assail-classifications.a2ml  audit-track-c-2026-06-23.md
brand/: 0.1-AI-MANIFEST.a2ml  BRAND.adoc  README.adoc
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: QUICKSTART.adoc  RSR_OUTLINE.adoc  STATE-VISUALIZER.adoc  proof-debt.md  tech-debt-2026-05-26.md
docs/architecture/: COLLABORATION.adoc  THREAT-MODEL.adoc
docs/attribution/: CITATION.cff  CITATIONS.adoc  CODEOWNERS.adoc  MAINTAINERS.adoc
docs/decisions/: 0000-template.adoc  0001-adopt-rsr-standard.adoc  0004-consolidate-paint-type-estates.adoc
docs/developer/: ABI-FFI-README.adoc  native-platform-testing.adoc
docs/governance/: MAINTENANCE-CHECKLIST.a2ml  MAINTENANCE-CHECKLIST.adoc
docs/issues/: 0.2-AI-MANIFEST.a2ml  README.adoc
docs/issues/plugin-toolset/: 0.3-AI-MANIFEST.a2ml  00-overview.md  01-wizard.md  02-minter.md  03-provisioner.md  04-configurator.md  05-harness.md  README.adoc
docs/licensing/: 0.2-AI-MANIFEST.a2ml
docs/practice/: AI-CONVENTIONS.adoc  STATE-VISUALIZER-GUIDE.adoc
docs/spec/: 0.2-AI-MANIFEST.a2ml  README.adoc  ptype-format.adoc
docs/superpowers/plans/: 2026-06-02-mvp-increment-0-walking-skeleton.md
docs/superpowers/specs/: 2026-05-31-pareto-surface-reduction-design.md  (+1 more)
docs/wiki/: Home.md
examples/: gesture_webview_demo.zig  undo_demo.zig
examples/images/: 0.2-AI-MANIFEST.a2ml  README.adoc
scripts/: build-host-local.sh  validate-template.sh
src/affinescript/: 0.2-AI-MANIFEST.a2ml
src/api/: 0.2-AI-MANIFEST.a2ml
src/backends/: 0.2-AI-MANIFEST.a2ml  dispatcher.zig
src/bridges/: 0.2-AI-MANIFEST.a2ml  paint-type-tile.twasm
src/capability/: 0.2-AI-MANIFEST.a2ml
src/ephapax/: 0.2-AI-MANIFEST.a2ml  Cargo.toml  README.adoc  build.rs
src/ephapax/benches/: undo.rs
src/ephapax/fuzz/: Cargo.toml
src/ephapax/fuzz/fuzz_targets/: pt_layer_opacity.rs  pt_tile_blit.rs  pt_tile_write_pixel.rs
src/ephapax/src/: 0.3-AI-MANIFEST.a2ml  README.adoc  brush.rs  composite.rs  layer.rs  lib.rs  undo.rs
src/ephapax/tests/: e2e_pipeline.rs
src/paint_collab/: .gitignore  0.2-AI-MANIFEST.a2ml  Cargo.toml  README.adoc
src/paint_collab/examples/: 0.3-AI-MANIFEST.a2ml  README.adoc  emit_manifest.rs
src/paint_collab/scripts/: 0.3-AI-MANIFEST.a2ml  README.adoc  validate_groove_manifest.sh
src/paint_collab/src/: 0.3-AI-MANIFEST.a2ml  README.adoc  crdt.rs  groove.rs  lib.rs  llm.rs  permission.rs  session.rs  transport.rs
src/paint_collab/tests/: 0.3-AI-MANIFEST.a2ml  README.adoc  convergence.rs  e2e_two_peer.rs
src/ptype_format/: 0.2-AI-MANIFEST.a2ml  Cargo.toml  README.adoc
src/ptype_format/fuzz/: 0.3-AI-MANIFEST.a2ml  Cargo.toml  README.adoc  rust-toolchain.toml
src/ptype_format/fuzz/fuzz_targets/: 0.4-AI-MANIFEST.a2ml  README.adoc  decode_total.rs  roundtrip.rs
src/ptype_format/fuzz/seeds/: 0.4-AI-MANIFEST.a2ml  README.adoc  empty.ptype
src/ptype_format/src/: 0.3-AI-MANIFEST.a2ml  README.adoc  lib.rs
src/shell/: 0.2-AI-MANIFEST.a2ml  README.adoc  build.zig  main.zig
src/ui/: canvas-viewport.affine  index.html  layer-panel.affine  tool-bar.affine
src/wasm/: 0.2-AI-MANIFEST.a2ml
tests/: aspect_tests.sh  coverage.sh  e2e.sh
tests/e2e/: collaboration_session_test.sh  scenario_pipeline_dogfood.sh  template_instantiation_test.sh
tests/fuzz/: README.adoc
(+47 files in other folders)
